mule-user-guide/v/3.3/1-installing-the-demo-bundle.adoc
= Installing the Demo Bundle

. Ensure that you have installed http://www.oracle.com/technetwork/java/javase/downloads/index.html[JDK6] on your computer.
. Download the http://s3.amazonaws.com/MuleEE/mule-ha-bundle-3.3.1.zip[*Mule HA Demo Bundle*]
+
[TIP]
====
*Currently Running an Older Version of Mule?*
+

If you have MULE_HOME [environment variable] set to an older installation of Mule ESB, then the scripts included in this demo bundle will start the old Mule instance instead of the new ones in this bundle. To prevent this from occurring, empty the variable in each new console before you start a Mule sever.

To empty MULE_HOME in *Windows*:

$ MULE_HOME=
$ export MULE_HOME

To empty MULE_HOME in *Mac* or *Linux*:
c:/set MULE_HOME=
====
+

. On your local drive, navigate the folder which contains you newly downloaded `mule-ha-bundle-3.3.1.zip` file. If your system has not already unzipped the file, unzip it now.

. The demo bundle includes six scripts in the `mule-ha-bundle-3.3.1/bin` folder. Open your *Console* (PC) or your *Terminal* application (Mac), then execute the following scripts one-by-one in the order in which they are listed.

[TIP]
====
*How to Run the Scripts*

.. *Windows*: Open the *Console*.
+
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).

.. Access the directory and folder into which you downloaded the demon bundle, then direct your system to execute a script.
+
For example, for *Windows*, type `/user/aaron/downloads/mule-ha-bundle-3.3.1/bin/startServer1.bat`
+
For example, for *Mac* or *Linux*, type `user/aaron/downloads/mule-ha-bundlle-3.3.1/bin/startServer1.sh`

.. Wait for you system to complete the script execution. For example, when it has completed executing the `startServer1` script, Mule displays a notifications that reads, `Mule is up and kicking (every 500ms)`.
+
image::/docs/download/attachments/87687471/mule_is_kicking.png?version=1&modificationDate=1349718017664[image,align="center"]
====

[TIP]
Be sure to run each script in a different console and keep each console open while running the demo.

.. `clean` - cleans the cluster environment to clear out any previous installations of the demo bundle.
.. `install` - sets up the cluster environment
+
* creates two Mule serves to form a cluster
* create a third Mule server to run the Mule Management Console
* creates the WidgetUI Web application to use to apply load to the cluster
* downloads a play framework required to run the WidgetUI application

.. `startServer1` - starts the first Mule server
.. `startServer2` - starts the second Mule server
.. `startMmc` - starts the Mule Management Console server (this may take several minutes)
.. `startWidgetUI` - starts the Widget UI Web application

[TIP]
====
In a *production environment*, the various cluster components would be distributed across multiple machines, so as to minimize the changes that a single-point hardware or other failure could cause the entire system to crash.

For demonstration purposes, we install and run all the cluster components in this example on a single, local drive.
====

[width="99",cols="50,50",frame="none",grid="none"]
|===
| >|link:/mule-user-guide/v/3.3/2-creating-a-cluster[Next: Creating a Cluster >>]
|===
