mule-user-guide/v/3.7/1-installing-the-demo-bundle.adoc
= Installing the Demo Bundle
:keywords: install, demo

[TIP]
You can now easily create a cluster through the Runtime Manager UI. See link:/cloudhub/creating-and-managing-clusters[Creating and Managing Clusters].

. Ensure that you have installed link:http://www.oracle.com/technetwork/java/javase/downloads/java-archive-downloads-javase6-419409.html[JDK 7] on your local drive.

. Download the link:https://www.mulesoft.com/dl/mmc[Mule Management Console (MMC) Distribution]

. Download the link:_attachments/mule-ha-bundle-3.0.zip[*Mule HA Demo Bundle - mule-ha-bundle-3.0.zip*] and unzip it

. Place the compressed MMC Distribution .zip file inside the *lib* folder of the Mule HA Demo Bundle, so that the scripts know where to find it.
+
[CAUTION]
====
*Currently Running an Older Version of Mule?*

If you have MULE_HOME link:http://en.wikipedia.org/wiki/Environment_variable[environment variable] set to an older installation of Mule ESB, then the scripts included in this demo bundle will start the old Mule instance instead of the new ones in this bundle. To prevent this from occurring, empty the variable in each new console before your start a Mule server.

To empty MULE_HOME in *Windows*: +
c:/set MULE_HOME=

To empty MULE_HOME in *Mac* or *Linux*: +
$ MULE_HOME=  +
$ export MULE_HOME
====

. On your local drive, navigate to the folder which contains your newly downloaded *mule-ha-bundle-3.0.zip* file. If your system has not already unzipped the file, unzip it now.

. The demo bundle includes six scripts in the `mule-ha-bundle-3.0/bin` folder. From the command line, execute the following scripts one by one in the order in which they are listed.

.. `clean` - cleans the cluster environment to clear the out any previous installations of the demo bundle.

.. `install`- sets up the cluster environment +
* creates two Mule servers to form a cluster
* creates a third Mule server to run the Mule Management Console
* creates the WidgetUI Web application to use to apply load to the cluster
* downloads a play framework required to run the Widget UI application

.. `startServer1` - starts the first Mule server

.. `startServer2` - starts the second Mule server

.. `startMmc` - starts the Mule Management Console server (this may take several minutes)

.. `startWidgetUI` - starts the Widget UI Web application

[TIP]
====
In a *production environment*, the various cluster components would be distributed across multiple machines, so as to minimize the chances that a single-point hardware or other failure could cause the entire system to crash.

For demonstration purposes, we install and run all the cluster components in this example on a single, local drive.
====


== How to Run the Scripts

Follow this procedure for each one of the scripts:

.. *Windows*: Open the *Console*. +
*Mac*: Open the *Terminal* application (Applications > Utilities > Terminal).

.. Access the directory and folder into which you downloaded the demo bundle, then direct your system to execute a script.
+
For example, for *Windows*, type `/users/aaron/downloads/mule-ha-bundle-3.0/bin/clean.bat`
+
For example, for *Mac* or *Linux*, type `users/aaron/downloads/mule-ha-bundle-3.0/bin/clean.sh`

.. Wait for your system to complete the script execution. For example, when it has completed executing the `startServer1` script, Mule displays the following notification:
+
image:mule_is_kicking.png[mule_is_kicking]

[TIP]
====
Be sure to run each script in a different console tab, and keep each console open while running the demo.
====

== See Also

* link:https://www.mulesoft.com/dl/mmc[MMC Download]
* link:https://developer.mulesoft.com/anypoint-platform[Mule Community Edition]
* link:http://forums.mulesoft.com[MuleSoft's Forums]
* link:https://www.mulesoft.com/support-and-services/mule-esb-support-license-subscription[MuleSoft Support]
* mailto:support@mulesoft.com[Contact MuleSoft]
